--- a/sandbox/bar/biome.jsonc
+++ b/sandbox/bar/biome.jsonc
@@ -2,7 +2,10 @@
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "linter": {
     "rules": {
-      "all": true
+      "all": true,
+      "style": {
+        "useConst": "off"
+      }
     }
   }
 }
